--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
 	},
 	"require": {
       "desarrolla2/cache":  "~2.0",
-      "predis/predis": "~1.0.0"
+      "predis/predis": "~1.0.0",
+		"qiniu/php-sdk": "^7.1"
 	}
 }
