--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
 	"require": {
 		"qiniu/php-sdk": "^7.2",
 		"phpmailer/phpmailer": "^6.0",
-		"phpoffice/phpexcel": "^1.8"
+		"phpoffice/phpexcel": "^1.8",
+		"alibabacloud/client": "^1.5"
 	}
 }
