--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
 		"phpmailer/phpmailer": "^6.0",
 		"phpoffice/phpexcel": "^1.8",
 		"alibabacloud/client": "^1.5",
-		"ext-json": "*"
+		"ext-json": "*",
+		"yansongda/pay": "^1.0"
 	}
 }
